objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Campaign_ID_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign ID not found, updated by flow</description>
        <inlineHelpText>Campaign ID not found, updated by flow</inlineHelpText>
        <label>Campaign ID Invalid,</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>Campaign ID from Web to Lead</description>
        <inlineHelpText>Campaign ID from Web to Lead</inlineHelpText>
        <label>Campaign ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <label>GA Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <label>GA Content</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Term__c</fullName>
        <label>GA Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Contact_Matches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Contact Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Interest__c</fullName>
        <label>Program Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseLMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseLMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source_Page__c</fullName>
        <description>This field will contain the url of the web page the user was visiting when they chose
to fill out the lead form</description>
        <inlineHelpText>This field will contain the url of the web page the user was visiting when they chose
to fill out the lead form</inlineHelpText>
        <label>Web Source Page</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
</CustomObject>